--- a/css/main.css
+++ b/css/main.css
@@ -18,17 +18,27 @@ body {
 }
 
 .navbar-nav>li>.dropdown-menu,
-.navbar-nav li a {
+.navbar-nav li a,
+.navbar-nav li a:hover,
+.navbar-nav li a:focus,
+.navbar-nav li a:active,
+.block_1 .block_text h3 {
     color: #fff;
 }
 
-.carousel-caption h2 {
+.carousel-caption h2,
+.about_choose_us h2,
+.block_text h3 {
     text-transform: uppercase;
 }
 
 .yellow_phrase,
 .navbar-nav li a:hover {
     color: #fff200;
+}
+
+.black_phrase {
+    color: #232323;
 }
 
 .navbar-header .navbar-brand,
@@ -51,7 +61,9 @@ body {
 
 .navbar-nav>li>.dropdown-menu,
 .navbar-nav>li>.dropdown-menu .dropdown-submenu .dropdown-menu,
-.navbar-nav li a:hover {
+.navbar-nav li a:hover,
+.navbar-nav li a:focus,
+.navbar-nav li a:active {
     background-color: rgba(44,30,62,0.8);
 }
 
@@ -183,12 +195,77 @@ body {
     margin: -9% 0 0 -25%;
 }
 
-
 .carousel-caption h2 {
     font-size: 64px;
     padding-bottom: 40px;
 }
 
+.about_choose_us {
+    padding-top: 105px;
+}
+
+.about_choose_us .intro {
+    text-align: center;
+}
+
+.about_choose_us .intro h2 {
+    margin: 0;
+    font-size: 35px;
+    font-weight: bold;
+    color: #009dda;
+    padding-bottom: 35px;
+}
+
+.about_choose_us .intro p {
+    color: #999;
+    padding-bottom: 80px;
+}
+
+.choose_blocks {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    padding-bottom: 110px;
+}
+
+.block_1, .block_2, .block_3, .block_4,.block_5 {
+    width: 200px;
+    text-align: center;
+    border: 1px solid #ebebeb;
+    padding: 40px 20px 34px 20px;
+}
+
+.choose_blocks .block_1 .block_text {
+    text-align: center;
+    background-color: #503392;
+}
+
+.block_1 .block_text {
+    padding: 30px 0;
+}
+
+.block_1 .block_1_links img {
+    padding: 0 6px;
+}
+
+.block_img {
+    padding-bottom: 50px;
+}
+
+.block_3 .block_img {
+    padding-bottom: 60px;
+}
+
+.block_text h3 {
+    font-weight: bold;
+    font-size: 14px;
+    margin: 0;
+    padding-bottom: 28px;
+}
+
+.block_text p {
+    color: #999;
+}
 
 
 
@@ -207,6 +284,9 @@ body {
     }
     .carousel-caption p {
         font-size: 10px;
+    }
+    .block_1, .block_2, .block_3, .block_4 {
+        margin-bottom: 10px;
     }
 }
 
@@ -254,6 +334,15 @@ body {
         height: 30%;
         width: 50%;
         margin: -19% 0 0 -25%;
+    }
+}
+
+@media (max-width: 430px) {
+    .choose_blocks {
+        justify-content: center;
+    }
+    .block_1, .block_2, .block_3, .block_4 {
+        margin-bottom: 10px;
     }
 }
 
