--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ body {
     max-width: 1540px;
 }
 
+/*     Navbar      */
+
 .navbar {
     background-color: #fff;
 }
@@ -28,7 +30,9 @@ body {
 
 .carousel-caption h2,
 .about_choose_us h2,
-.block_text h3 {
+.block_text h3,
+.skills h2,
+.names {
     text-transform: uppercase;
 }
 
@@ -69,7 +73,7 @@ body {
 
 
 
-/*Dropdown Menu */
+/*     Dropdown Menu     */
 
 .dropdown-submenu {
     position: relative;
@@ -177,6 +181,8 @@ body {
     margin-top: 4px;
 }
 
+/*     Banner     */
+
 .banner-section {
     padding-top: 0;
     overflow: auto;
@@ -200,6 +206,8 @@ body {
     padding-bottom: 40px;
 }
 
+/*     Choose us block     */
+
 .about_choose_us {
     padding-top: 105px;
 }
@@ -208,7 +216,7 @@ body {
     text-align: center;
 }
 
-.about_choose_us .intro h2 {
+.intro h2 {
     margin: 0;
     font-size: 35px;
     font-weight: bold;
@@ -216,7 +224,7 @@ body {
     padding-bottom: 35px;
 }
 
-.about_choose_us .intro p {
+.intro p {
     color: #999;
     padding-bottom: 80px;
 }
@@ -267,8 +275,42 @@ body {
     color: #999;
 }
 
+/*     Products     */
 
 
+
+
+/*     About us     */
+
+.skills p {
+    padding-bottom: 50px;
+}
+
+.skills .black_text {
+    color: #373737;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+.percents {
+    padding-bottom: 25px;
+}
+
+.names {
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+
+.right_img {
+    padding-top: 20px;
+    text-align: right;
+}
 
 
 
@@ -288,6 +330,9 @@ body {
     .block_1, .block_2, .block_3, .block_4 {
         margin-bottom: 10px;
     }
+    .right_img {
+        text-align: center;
+    }
 }
 
 
@@ -298,6 +343,13 @@ body {
     }
     .carousel-caption p {
         font-size: 8px;
+    }
+    .navbar-form .form-control {
+        width: 200px;
+        margin-left: 10px;
+    }
+    .technologies .percent_img img {
+        width: 50%;
     }
 }
 
